--- a/2023-12-20 -mazvydo biblioteka sass/style.css
+++ b/2023-12-20 -mazvydo biblioteka sass/style.css
@@ -3,10 +3,11 @@
   margin: 0;
   padding: 0;
 }
-    
+
 body {
   background-color: #ebebeb;
 }
+
 header {
   display: flex;
   flex-direction: column;
@@ -14,15 +15,13 @@ header {
   box-shadow: 1px 1px 1px black;
   background-color: #fff;
 }
-
-img {
+header .logo {
   width: 100px;
 }
-
-.menu li a {
-    text-decoration: none;
+header .menu li a {
+  text-decoration: none;
 }
-.menu li {
+header .menu li {
   list-style-type: none;
   text-align: center;
   margin-bottom: 10px;
@@ -33,26 +32,24 @@ img {
   max-width: 1250px;
   margin: auto;
 }
+
 .content {
   margin: 20px;
   box-shadow: 0px 3px 12px rgb(138, 135, 135);
   border-radius: 5px;
   padding: 20px;
 }
-
-table,
-thead,
-tbody {
+.content table,
+.content thead,
+.content tbody {
   display: table;
   width: 100%;
   text-align: left;
 }
-
-th {
+.content th {
   width: 50%;
 }
-
-td {
+.content td {
   border-bottom: 1px solid grey;
   border-top: 1px solid grey;
   width: 50%;
@@ -71,10 +68,9 @@ footer {
     justify-content: space-between;
     padding: 0 40px;
   }
-  
-  .menu  {
+  .menu {
     display: flex;
     flex-direction: row;
     gap: 20px;
   }
-}
+}/*# sourceMappingURL=style.css.map */
