--- a/2023-12-11-clipboard-landing-page/style.css
+++ b/2023-12-11-clipboard-landing-page/style.css
@@ -207,7 +207,7 @@ footer {
     }
     .left-container {
         display: flex;
-        justify-content: flex-end
+        justify-content: flex-end;
     }
 }
 
