--- a/2024-01-25-to-do/style.css
+++ b/2024-01-25-to-do/style.css
@@ -66,11 +66,7 @@ textarea {
     border: 1px solid grey;
     background-color: #f8fafc;
 }
-span {
-    color: #ac686d;
-    font-size: 12px;
-    float: left;
-}
+
 
 .done-task-table {
     background-color: #fff;
@@ -88,15 +84,55 @@ span {
 .done-task {
     margin: 40px 0;
     width: 570px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+    box-shadow: 1px 3px 13px -6px;
+    padding: 10px;
+    border-radius: 5px;
+
 }
+.task-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 0;
+    margin: 10px 0;
+    cursor: pointer;
+    width: 100%;
+    border-bottom: 1px solid grey;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+.task-card:hover {
+    background-color: #ccdae7;
+}
+.task-card:active {
+    background-color: #d7dfe6;
+}
+
+.status-bubble {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.in-progress {
+    background-color: red;
+}
+.done {
+    background-color: green;
+}
+
 
 h2 {
     font-weight: 500;
     font-size: 20px;
     margin-left: 50px;
-}
-.crossed {
-    text-decoration: line-through;
 }
 
 input {
@@ -123,10 +159,7 @@ input {
     text-align: center;
 }
 
-.error {
-    text-align: center;
-    padding-top: 10px;
-}
+
 
 .back {
     background-color: #222222;
