--- a/2024-01-29-random-coctail-api-uzduotis/style.css
+++ b/2024-01-29-random-coctail-api-uzduotis/style.css
@@ -3,10 +3,12 @@
     margin: auto;
     border: 2px solid black;
     text-align: center;
+    border-radius: 5px;
 }
 
 .image {
     width: 300px;
+    border-radius: 5px;
 }
 
 .indicator {
