--- a/2024-02-01- recipes uzduotis POST API/style.css
+++ b/2024-02-01- recipes uzduotis POST API/style.css
@@ -8,11 +8,14 @@ body {
     width: 70%;
     border: 1px solid black;
     padding: 30px;
-
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: black;
 }
 
 img {
-    width: 500px;
+    width: 300px;
 }
 
 header {
