--- a/2024-01-24-login-uzduotys-storage/style.css
+++ b/2024-01-24-login-uzduotys-storage/style.css
@@ -1,3 +1,45 @@
+body {
+    margin: 0;
+}
+
+header {
+    background-color: rgb(30, 210, 180);
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+    height: 100px;
+        ul {
+            display: flex;
+            gap: 10px;
+        }
+            li {
+                list-style-type: none;
+            }
+                a {
+                    text-decoration: none;
+                    font-size: 20px;
+                    color: #fff;
+                }
+}
+.burger {
+    width: 60px;
+    display: none;
+}
+
+.logo {
+    width: 80px;
+    height: 80px;
+        img {
+            width: 100%;
+        }
+}
+.burger-btn {
+    all: unset;
+}
+
+
+
 .form {
     display: flex;
     flex-direction: column;
@@ -7,6 +49,7 @@
     padding: 20px;
     border-radius: 5px;
     background-color: rgb(178, 200, 219);
+    margin-top: 20px;
 }
 
 #buttonLogin {
@@ -33,4 +76,48 @@
 .errorMessage {
     color: red;
     text-align: center;
+}
+
+.mobile-menu {
+    width: 100%;
+    height: 100%;
+    background-color: cornflowerblue;
+    position: fixed;
+    transition: 0.3s ease-in;
+    left: -100%;
+    display: none;
+        nav {
+            ul {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 2rem;
+            padding-top: 4rem;
+            }
+                li {
+                    list-style-type: none;
+                }
+                    a{
+                        font-size: 20px;
+                        text-decoration: none;
+                        color: white;
+                    }
+        }
+}
+
+.active {
+    left: 0;
+}
+
+@media screen and (max-width: 768px ) {
+    header ul {
+        display: none;
+    }
+    .burger {
+        display: inline-block;
+        cursor: pointer;
+    }
+    .mobile-menu {
+        display: inline-block;
+    }
 }
