--- a/2024-02-09-JS-baigiamasis-darbas/post/postStyle.css
+++ b/2024-02-09-JS-baigiamasis-darbas/post/postStyle.css
@@ -1,3 +1,10 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+    
 .body {
     margin: 0 auto;
     display: flex;
@@ -49,10 +56,16 @@
            border: none;
            border-radius: 2px;
            padding: 5px;
+           cursor: pointer;
+           font-size: 18px;
             a {
                 text-decoration: none;
                 color: #fff;
             }
+            
+        }
+        .add-btn:hover {
+            box-shadow: 0px 0px 3px 0px black;
         }
         .menu ul {
             display: flex;
@@ -67,7 +80,119 @@
                             color: black;
                             font-size: 18px;
                         }
+                        a:hover {
+                            color: #fff;
+                        }
                 }
             
         }
 }   
+
+
+.post-wrapper {
+    box-shadow: 0px 0px 26px 0px rgb(201, 200, 200);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    .image-placeholder {
+        
+        width: 50%;
+        height: 50%;
+        
+            .img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+    }
+    .info-placeholder {
+        .title-price-placeholder {
+            display: flex;
+            justify-content: space-around;
+            padding-top: 10px;
+                .post-price {
+                    color: #43a71e;
+                    font-size: 24px;
+                    font-weight: bold;
+                }
+        }
+        .description-location-placeholder{
+            .description {
+                font-size: 22px;
+            }
+            .location {
+                font-size: 18px;
+                color: rgb(90, 89, 89);
+            }
+        }
+        .button-message-placeholder {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            padding-top: 30px;
+                .delete-post-btn,
+                .go-back-btn {
+                    font-size: 18px;
+                    padding: 4px 12px;
+                    border: none;
+                    border-radius: 3px;
+                    color: #fff;
+                    cursor: pointer;
+                        a {
+                            text-decoration: none;
+                            color: black;
+                        }
+                }
+                .delete-post-btn {
+                    background-color: #43a71e;
+                }
+                .delete-post-btn:hover,
+                .go-back-btn:hover {
+                    box-shadow: 0px 0px 3px 0px black;
+                }
+        }
+
+    }
+}
+.footer {
+    background-color: #f7f5f4;
+    border-top: 4px solid #ffcc01;
+        .footer-list {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            justify-items: center;
+            align-items: center;
+                .footer-logo {
+                    width: 100px;
+                    padding: 20px;
+                }
+                .footer-box {
+                    display: flex;
+                    flex-direction: column;
+                    
+                        ul {
+                            display: flex;
+                            flex-direction: column;
+                            padding: 0;
+                            margin: 0;
+                            
+                            li {
+                                list-style-type: none;
+                                display: flex;
+                                flex-direction: column;
+                                a {
+                                    color: black;
+                                    padding-bottom: 10px;
+                                }
+                                a:hover {
+                                    transform: scale(1.1);
+                                    transition: 0.3s ease;
+                                }
+                                
+                            }
+                        }
+                    
+                }
+        }
+}
