--- a/2024-02-09-JS-baigiamasis-darbas/post/postStyle.css
+++ b/2024-02-09-JS-baigiamasis-darbas/post/postStyle.css
@@ -1,144 +1,7 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-}
-    
-.main-body {
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
-
-    .left-side-layout {
-        width: 80%;
-    }
-    .right-side-layout {
-        width: 300px;
-        margin-left: 5px;
-        margin-top: 200px;
-        position: sticky;
-        top: 0;
-        .vertical-ad {
-            width: 300px;
-            position: sticky;
-            top: 0;
-            
-            
-        }
-    }
-}
-.adContainer {
-    width: 600px;
-    margin: auto;
-    margin-top: 20px;
-}
-
-.container-web {
-    width: 100%;
-}
-
-
-.logo img {
-    width: 200px;
-}
-
-.menu-bar {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #ffcc01;
-    padding: 10px 20px;
-        .add-btn  {
-           background-color: #43a71e; 
-           border: none;
-           border-radius: 2px;
-           padding: 5px;
-           cursor: pointer;
-           font-size: 18px;
-            a {
-                text-decoration: none;
-                color: #fff;
-            }
-            
-        }
-        .add-btn:hover {
-            box-shadow: 0px 0px 3px 0px black;
-        }
-        .menu {
-            display: flex;
-                .burger-btn {
-                    all: unset;
-                    /* .burger {
-                        display: none;
-                    } */
-                }
-            }
-        .burger {
-            display: none;
-        }
-        .menu ul {
-            display: flex;
-            gap: 15px;
-            align-items: center;
-            margin: 0;
-
-                li {
-                    list-style-type: none;
-                        a {
-                            text-decoration: none;
-                            color: black;
-                            font-size: 18px;
-                        }
-                        a:hover {
-                            color: #fff;
-                        }
-                }
-            
-        }
-}   
-
-.mobile-menu {
-    width: 80%;
-    height: 100%;
-    background-color: #ffcc01;
-    position: fixed;
-    transition: 0.3s ease-in;
-    margin-left: 10%;
-    z-index: 2;
-    left: -100%;
-    display: none;
-        
-        ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 2rem;
-        padding-top: 4rem;
-        }
-            li {
-                list-style-type: none;
-            }
-                a{
-                    font-size: 20px;
-                    text-decoration: none;
-                    color: white;
-                }
-                a:hover {
-                    text-decoration: underline;
-                }
-        
-}
-
-.active {
-    left: 0;
-} 
-
+@import '../variables.css';
 
 .post-wrapper {
-    box-shadow: 0px 0px 26px 0px rgb(201, 200, 200);
+    box-shadow: var(--box-shadow);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -161,7 +24,7 @@
             justify-content: space-around;
             padding-top: 10px;
                 .post-price {
-                    color: #43a71e;
+                    color: var(--secondary-color);
                     font-size: 24px;
                     font-weight: bold;
                 }
@@ -172,7 +35,7 @@
             }
             .location {
                 font-size: 18px;
-                color: rgb(90, 89, 89);
+                color: var(--text-color-grey);
             }
         }
         .button-message-placeholder {
@@ -186,73 +49,29 @@
                     padding: 4px 12px;
                     border: none;
                     border-radius: 3px;
-                    color: #fff;
+                    color: var(--text-color-white);
                     cursor: pointer;
                         a {
                             text-decoration: none;
-                            color: black;
+                            color: var(--text-color-black);
                         }
                 }
                 .message {
                     font-size: 20px;
-                    color: #43a71e;
+                    color: var(--secondary-color);
                     margin: 0;
                     font-weight: bold;
                 }
                 .delete-post-btn {
-                    background-color: #43a71e;
+                    background-color: var(--secondary-color);
                 }
                 .delete-post-btn:hover,
                 .go-back-btn:hover {
-                    box-shadow: 0px 0px 3px 0px black;
+                    box-shadow: var(--button-shadow);
                 }
         }
 
     }
-}
-.footer {
-    background-color: #f7f5f4;
-    border-top: 4px solid #ffcc01;
-    margin-top: 100px;
-        .footer-list {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            justify-items: center;
-            align-items: center;
-                .footer-logo {
-                    width: 100px;
-                    padding: 20px;
-                }
-                .footer-box {
-                    display: flex;
-                    flex-direction: column;
-                    
-                        ul {
-                            display: flex;
-                            flex-direction: column;
-                            padding: 0;
-                            margin: 0;
-                            
-                            li {
-                                list-style-type: none;
-                                display: flex;
-                                flex-direction: column;
-                                align-items: flex-start;
-                                
-                                a {
-                                    color: black;
-                                    padding-bottom: 10px;
-                                }
-                                a:hover {
-                                    transform: scale(1.1);
-                                    transition: 0.3s ease;
-                                }
-                                
-                            }
-                        }
-                    
-                }
-        }
 }
 
 @media screen and (max-width: 1025px) {
